--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: dDiscordBot
 authors: ['mcmonkey']
 version: ${project.version} (build ${BUILD_NUMBER})
 main: com.denizenscript.ddiscordbot.dDiscordBot
-softdepend: [Denizen]
+depend: [Denizen]
