--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.denizenscript</groupId>
     <artifactId>ddiscordbot</artifactId>
     <packaging>jar</packaging>
-    <version>0.1</version>
+    <version>0.2</version>
     <name>dDiscordBot</name>
     <description>Adds a Discord to Denizen</description>
 
@@ -52,9 +52,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.austinv11</groupId>
+            <groupId>com.discord4j</groupId>
             <artifactId>Discord4J</artifactId>
-            <version>2.9.3</version>
+            <version>2.10.1</version>
             <classifier>shaded</classifier>
         </dependency>
 
@@ -95,12 +95,12 @@
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <include>com.github.austinv11:Discord4J</include>
+                                    <include>com.discord4j:Discord4J</include>
                                 </includes>
                             </artifactSet>
                             <filters>
                                 <filter>
-                                    <artifact>com.github.austinv11:Discord4J</artifact>
+                                    <artifact>com.discord4j:Discord4J</artifact>
                                     <includes>
                                         <include>**</include>
                                     </includes>
