--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <groupId>com.denizenscript</groupId>
     <artifactId>ddiscordbot</artifactId>
     <packaging>jar</packaging>
-    <version>0.2</version>
+    <version>0.5</version>
     <name>dDiscordBot</name>
-    <description>Adds a Discord to Denizen</description>
+    <description>Adds a Discord bot to Denizen</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -116,6 +116,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                    <finalName>dDiscordBot-${version}-b${BUILD_NUMBER}</finalName>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
