--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <BUILD_NUMBER>Unknown</BUILD_NUMBER>
-        <bukkit.version>1.14-R0.1-SNAPSHOT</bukkit.version>
-		<denizen.version>1.0.5-SNAPSHOT</denizen.version>
+        <bukkit.version>1.14.3-R0.1-SNAPSHOT</bukkit.version>
+		<denizen.version>1.1.0-SNAPSHOT</denizen.version>
     </properties>
 
     <!-- Repositories -->
@@ -60,7 +60,7 @@
 
     <ciManagement>
         <system>jenkins</system>
-        <url>http://ci.citizensnpcs.co</url>
+        <url>https://ci.citizensnpcs.co</url>
     </ciManagement>
     <scm>
         <connection>scm:git:git://github.com/DenizenScript/dDiscordBot.git</connection>
