--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.aufdemrand</groupId>
+            <groupId>com.denizenscript</groupId>
             <artifactId>denizen</artifactId>
             <version>${denizen.version}</version>
             <type>jar</type>
