use https for cit repo

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         </repository>
         <repository>
             <id>everything</id>
-            <url>http://repo.citizensnpcs.co</url>
+            <url>https://repo.citizensnpcs.co</url>
         </repository>
     </repositories>
 
