--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ authors: ['mcmonkey']
 version: ${project.version} (build ${BUILD_NUMBER})
 main: com.denizenscript.ddiscordbot.DenizenDiscordBot
 depend: [Denizen]
+
+api-version: 1.13
