--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             </snapshots>
             <id>central</id>
             <name>Maven Repository Switchboard</name>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
         <repository>
             <id>everything</id>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.discord4j</groupId>
             <artifactId>discord4j-core</artifactId>
-            <version>3.0.4</version>
+            <version>3.0.12</version>
         </dependency>
 
     </dependencies>
