--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <finalName>dDiscordBot-${version}-b${BUILD_NUMBER}</finalName>
+                    <finalName>dDiscordBot-${project.version}-b${BUILD_NUMBER}</finalName>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
