--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <BUILD_NUMBER>Unknown</BUILD_NUMBER>
-        <bukkit.version>1.15.2-R0.1-SNAPSHOT</bukkit.version>
-		<denizen.version>1.1.4-SNAPSHOT</denizen.version>
+        <bukkit.version>1.16.1-R0.1-SNAPSHOT</bukkit.version>
+		<denizen.version>1.1.5-SNAPSHOT</denizen.version>
     </properties>
 
     <!-- Repositories -->
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.discord4j</groupId>
             <artifactId>discord4j-core</artifactId>
-            <version>3.1.0.M1</version>
+            <version>3.1.0.RC3</version>
         </dependency>
 
     </dependencies>
