--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <BUILD_NUMBER>Unknown</BUILD_NUMBER>
-        <bukkit.version>1.17.1-R0.1-SNAPSHOT</bukkit.version>
+        <bukkit.version>1.18.1-R0.1-SNAPSHOT</bukkit.version>
         <denizen.version>1.2.3-SNAPSHOT</denizen.version>
     </properties>
 
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.3.0_305</version>
+            <version>5.0.0-alpha.3</version>
         </dependency>
     </dependencies>
 
