--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>${bukkit.version}</version>
-            ,<type>jar</type>
+            <type>jar</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
