--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-alpha.9</version>
+            <version>5.0.0-alpha.11</version>
         </dependency>
     </dependencies>
 
@@ -107,6 +107,8 @@
                                     <include>org.apache.commons:**</include>
                                     <include>org.slf4j:**</include>
                                     <include>com.squareup.okio:**</include>
+                                    <include>org.jetbrains.kotlin:**</include>
+                                    <include>org.jetbrains:annotations:**</include>
                                     <include>net.sf.trove4j:**</include>
                                 </includes>
                             </artifactSet>
@@ -158,6 +160,10 @@
                                 <relocation>
                                     <pattern>org.slf4j</pattern>
                                     <shadedPattern>com.denizenscript.shaded.org.slf4j</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.jetbrains</pattern>
+                                    <shadedPattern>com.denizenscript.shaded.org.jetbrains</shadedPattern>
                                 </relocation>
                                 <relocation>
                                     <pattern>okio</pattern>
