target Denizen 1.2.8, add error detail, I'm not the only author of the plugin lol

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: dDiscordBot
-authors: ['mcmonkey']
+authors: ['mcmonkey', 'the Denizen Script team']
 version: ${project.version} (build ${BUILD_NUMBER})
 main: com.denizenscript.ddiscordbot.DenizenDiscordBot
 depend: [Denizen]
